--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -34,7 +34,7 @@
       <%= form.submit  %>
     </div>
   <% end %>
-  <%= link_to "Cancel", user_board_path(current_user, @board) %>
+  <%= link_to "Cancel", user_board_path(current_user, @board), class: "button" %>
 <% end %>
 <br>
 
