--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,6 +1,6 @@
 <div class="middle-container">
   <div>
-    <div class="md big m1">All Boards</div>
+    <div class="text-center big my-4">All Boards</div>
   </div>
 </div>
 <hr>
