--- a/app/views/pins/_note.html.erb
+++ b/app/views/pins/_note.html.erb
@@ -1,4 +1,4 @@
-<div id="note_content" class="m1">
+<div id="note_content" class="my-4">
   <div class="note-header"><strong>Note to self:</strong></div>
   <div><%= note.content if note.present? %></div>
 
