--- a/app/views/saved_pins/destroy.turbo_stream.erb
+++ b/app/views/saved_pins/destroy.turbo_stream.erb
@@ -7,10 +7,6 @@
 <%= turbo_stream.update "save_unsaved#{dom_id(@pin)}" do %>
   <% been_saved, saved_to = saved_to_board(@pin, current_user) %>
   <%# saved_to_board is a helper method %>   
-  <% if been_saved == false %>
-    <%= render partial: "shared/saved_pin_form_layout", locals: {pin: @pin} %>
-  <% end %>
-  <% if been_saved == true %>
-    <%= render partial: "shared/unsave_layout", locals: {pin: @pin, board_id: saved_to} %>
-  <% end %>
+  <%= render partial: "shared/saved_pin_form_layout", locals: {pin: @pin} unless been_saved %>
+  <%= render partial: "shared/unsave_layout", locals: {pin: @pin, board_id: saved_to} if been_saved %>
 <% end %>
