--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -2,57 +2,59 @@
   <%= turbo_frame_tag "new_board" %>
 <% else %>
   <%= turbo_frame_tag "new_board" do %>
-    <%= form_with(model: [current_user, board]) do |form| %>
-      <%= render partial: "shared/errors_notification", locals: { resource: board } %>
-      <%= hidden_field_tag :in_saved_pin_mode, in_saved_pin_mode %>
-      
-      <% if defined?(pin_id) && pin_id != nil %>
-        <%= hidden_field_tag :pin_id, pin_id %>
-        <%# pin_id is for the case of createing new board in "save pin process" %>
-      <% end %>
-      
-      <div>
-        <%= form.label :cover, "Upload Cover",  style: "display: block"  %>
-        <%= form.file_field :cover %>
-      </div>
-
-      <div>
-        <%= form.label :cover_url, "Cover URL (recommended over uploaded cover)",  style: "display: block"  %>
-        <%= form.text_field :cover_url, autocomplete: "off" %>
-      </div>
-
-      <div>
-        <%= form.label :name, style: "display: block" %>
-        <%= form.text_field :name, autocomplete: "off" %>
-      </div>
-
-      <div>
-        <%= form.label :description, style: "display: block" %>
-        <%= form.text_area :description %>
-      </div>
-
-      <div>
-        <%= form.label :keep_secret, style: "display: block" %>
-        <%= form.check_box :keep_secret %>
-      </div>
-
-      <% if defined?(pin_id) && pin_id != nil %>
+    <div id="new_board_form">
+      <%= form_with(model: [current_user, board]) do |form| %>
+        <%= render partial: "shared/errors_notification", locals: { resource: board } %>
+        <%= hidden_field_tag :in_saved_pin_mode, in_saved_pin_mode %>
+        
+        <% if defined?(pin_id) && pin_id != nil %>
+          <%= hidden_field_tag :pin_id, pin_id %>
+          <%# pin_id is for the case of createing new board in "save pin process" %>
+        <% end %>
+        
         <div>
-          <%= form.submit  %>
-          <% if in_saved_pin_mode %>
-            <%= link_to "Cancel", new_user_board_path(current_user, cancel_form: true) %>
-          <% end %>
+          <%= form.label :cover, "Upload Cover",  style: "display: block"  %>
+          <%= form.file_field :cover %>
         </div>
-      <% end %>
 
-      <% if pin_id == nil %>
         <div>
-          <%= form.submit "Create Board", data: { turbo_frame: "_top" } %>
-          <% if in_saved_pin_mode %>
-            <%= link_to "Cancel", new_user_board_path(current_user, cancel_form: true) %>
-          <% end %>
+          <%= form.label :cover_url, "Cover URL (recommended over uploaded cover)",  style: "display: block"  %>
+          <%= form.text_field :cover_url, autocomplete: "off" %>
         </div>
+
+        <div>
+          <%= form.label :name, style: "display: block" %>
+          <%= form.text_field :name, autocomplete: "off" %>
+        </div>
+
+        <div>
+          <%= form.label :description, style: "display: block" %>
+          <%= form.text_area :description %>
+        </div>
+
+        <div class="flex gap-2">
+          <%= form.check_box :keep_secret %>
+          <%= form.label :keep_secret, style: "display: block" %>
+        </div>
+
+        <% if defined?(pin_id) && pin_id != nil %>
+          <div>
+            <%= form.submit  %>
+            <% if in_saved_pin_mode %>
+              <%= link_to "Cancel", new_user_board_path(current_user, cancel_form: true), class: "button" %>
+            <% end %>
+          </div>
+        <% end %>
+
+        <% if pin_id == nil %>
+          <div>
+            <%= form.submit "Create Board", data: { turbo_frame: "_top" } %>
+            <% if in_saved_pin_mode %>
+              <%= link_to "Cancel", new_user_board_path(current_user, cancel_form: true), class: "button" %>
+            <% end %>
+          </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   <% end %>
 <% end %>
