--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
     <header>
       <nav>
         <% if user_signed_in? %>
-          <%= link_to "Home ", root_path, class: "md big", "data-navigate-target": "navButton" %>
-          <%= link_to "Create Pin ", new_pin_path, class: "md big", "data-navigate-target": "navButton" %>
-          <%= link_to "Create Board ", new_user_board_path(current_user), class: "md big", "data-navigate-target": "navButton" %>
-          <%= link_to "Profile ", user_path(current_user), class: "md big", "data-navigate-target": "navButton" %>
-          <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete}, class: "md big right-side" %>
+          <%= link_to "Home ", root_path, class: "big", "data-navigate-target": "navButton" %>
+          <%= link_to "Create Pin ", new_pin_path, class: "big", "data-navigate-target": "navButton" %>
+          <%= link_to "Create Board ", new_user_board_path(current_user), class: "big", "data-navigate-target": "navButton" %>
+          <%= link_to "Profile ", user_path(current_user), class: "big", "data-navigate-target": "navButton" %>
+          <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete}, class: "big right-side" %>
         <% else %>
-          <p><%= link_to "Sign in ", new_user_session_path, class: "md big" %></p>
-          <p><%= link_to "Sign up", new_user_registration_path, class: "md big" %></p>
+          <p><%= link_to "Sign in ", new_user_session_path, class: "big" %></p>
+          <p><%= link_to "Sign up", new_user_registration_path, class: "big" %></p>
         <% end %>
       </nav>
     </header>
