--- a/app/views/saved_pins/_form.html.erb
+++ b/app/views/saved_pins/_form.html.erb
@@ -5,6 +5,6 @@
 
   <div>
     <%= form.submit "Save on Board" %>
-    <%= link_to "Cancel", new_pin_saved_pin_path(pin, cancel_form: true), data: {close_form_target: "button"} %>
+    <%= link_to "Cancel", new_pin_saved_pin_path(pin, cancel_form: true), class: "button", data: {close_form_target: "button"} %>
   </div>
 <% end %>
