--- a/app/views/saved_pins/new.html.erb
+++ b/app/views/saved_pins/new.html.erb
@@ -1,7 +1,6 @@
-<% if @cancel_form %>
-  <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") %>
-<% else %>
-  <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") do %>
+
+<%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") do %>
+  <% unless @cancel_form %>
     <div class="modal" data-controller="close-form" data-close-form-target="container" >
       <div class="modal-content">
         <%= render partial: "saved_pins/form", locals: {pin: @pin, saved_pin: @saved_pin} %>
