--- a/app/views/shared/_saved_overlay.html.erb
+++ b/app/views/shared/_saved_overlay.html.erb
@@ -1,5 +1,5 @@
 <% been_saved, saved_to = saved_to_board(pin, current_user) %>
 <%# saved_to_board is a saved_pin helper method %>
 
-<%= render partial: "shared/saved_pin_form_layout", locals: {pin: pin} if been_saved == false %>
-<%= render partial: "shared/unsave_layout", locals: {pin: pin, board_id: saved_to} if been_saved == true %>
+<%= render partial: "shared/saved_pin_form_layout", locals: {pin: pin} unless been_saved %>
+<%= render partial: "shared/unsave_layout", locals: {pin: pin, board_id: saved_to} if been_saved %>
