--- a/app/views/shared/_unsave_layout.html.erb
+++ b/app/views/shared/_unsave_layout.html.erb
@@ -1,11 +1,13 @@
 <% destination = board_id.nil? ? user__saved_index_path(current_user) : user_board_path(current_user, Board.find(board_id)) %>
 <% name = board_id.nil? ? "Unorganized Ideas" : Board.find(board_id).name %>
 <% name_prettier = "#{name.truncate(19)}" %>
+
 <div class="top-left bold">
   <%= link_to destination, class: "button", data: {turbo_frame: "_top"} do %>
     <span><%= name_prettier %></span> 
     <i class="fa-solid fa-check"></i>
   <% end %>
 </div>
-<% saved_pin = SavedPin.find_by(user: current_user, pin: pin, board_id: board_id) %>
+
+<% saved_pin = current_user.saved_pins.find_by(pin: pin, board_id: board_id) %>
 <div class="bottom-left"><%= button_to "Saved", pin_saved_pin_path(pin, saved_pin), method: :delete %></div>
