--- a/app/views/created/index.html.erb
+++ b/app/views/created/index.html.erb
@@ -6,7 +6,9 @@
     <% cache @pins do %>
       <% @pins.each do |pin| %>
         <% cache pin do %>
-          <%= render partial: "shared/pin", locals: {pin: pin, edit_pin: true } %>
+          <%= turbo_frame_tag "#{dom_id(pin)}_thumbnail", src: pin_thumbnail_index_path(pin, edit_pin: true), loading: "lazy" do %>
+            <div class="pin_thumbnail--placeholder"></div>
+          <% end %>
         <% end %>
       <% end %>
     <% end %>
