--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,7 +3,9 @@
     <% cache @pins do %>
       <% @pins.each do |pin| %>
         <% cache pin do %>
-          <%= render partial: "shared/pin", locals: {pin: pin} %>
+          <%= turbo_frame_tag "#{dom_id(pin)}_thumbnail", src: pin_thumbnail_index_path(pin), loading: "lazy" do %>
+            <div class="pin_thumbnail--placeholder"></div>
+          <% end %>
         <% end %>
       <% end %>
     <% end %>
