Always show layout button on mobile devices

--- a/app/assets/stylesheets/_pin_overlay.scss
+++ b/app/assets/stylesheets/_pin_overlay.scss
@@ -27,6 +27,13 @@
   position: absolute;
   transition: opacity 0.25s ease;
 }
+@media screen and (max-width: 767px) {
+  .top-left, 
+  .bottom-left, 
+  .bottom-right {
+    opacity: 1;
+  }
+}
 .top-left {
   top: 1rem;
   left: 1rem;
