--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -1,11 +1,10 @@
 .modal {
   position: fixed;
-  top: 0;
+  top: 6.25rem;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-  z-index: 5;
 }
 .modal-content {
   position: absolute;
@@ -13,7 +12,14 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
-  padding: 2rem;
-  border-radius: 5px;
-  z-index: 10;
+  padding: 0;
+  border-radius: 1rem;
+}
+.modal__close {
+  position: absolute;
+  right: 0.5rem;
+  top: 0.2rem;
+  z-index: 11;
+  background: none;
+  color: rgba(0, 0, 0, 0.9);
 }
