--- a/app/assets/stylesheets/_nav.scss
+++ b/app/assets/stylesheets/_nav.scss
@@ -1,18 +1,111 @@
-nav {
-  padding: 0 1rem;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 6.3rem;
+  padding: 1.3rem 10%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 1rem;  
+  z-index: 100;
+}
+header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(50px);
+  z-index: -1;
+}
+header::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, transparent, rgba(254, 254, 254, 0.4), transparent);
+  transition: 0.5s
+}
+header:hover::after {
+  left: 100%;
 }
 nav a {
   padding: 1.25rem;
   border-radius: 1.5rem;
   padding: 0.75rem;
-  margin: 0.5rem;
+  margin-left: 1.5rem;
+  color: #fff;
   z-index: 1;
 }
-nav a:hover {
-  background-color: rgb(204, 204, 204);
-  color: var(--color30);
-  text-decoration: none;
+.logo {
+  font-size: 1.5rem;
+  color: #fff;
+}
+.icons {
+  position: absolute;
+  right: 1.5rem;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
+}
+@media (max-width: 992px) {
+  header {
+    padding: 1.3rem 5%;
+  }
+}
+@media (max-width: 768px) {
+  .icons {
+    display: inline-flex;
+    color: #fff;
+  }
+  .header__user {
+    position: absolute;
+    right: 5rem;
+  }
+  #icon__close {
+    display: none;
+  }
+  #check:checked~.icons #icon__menu {
+    display: none;
+  }
+  #check:checked~.icons #icon__close {
+    display: block;
+  }
+
+  nav {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 0rem;
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(50px);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.9);
+    overflow: hidden;
+    transition: 0.3s ease;
+  }
+  #check:checked~nav {
+    height: 18rem;
+  }
+  nav a {
+    display: block;
+    text-align: center;
+    margin: 1rem 0;
+    opacity: 0;
+    transform: translateY(-50px);
+    transition: 0.3s ease;
+  }
+  #check:checked~nav a {
+    opacity: 1;
+    transform: translateY(0);
+    transition-delay: calc(0.14s * var(--i));
+  }
 }
