--- a/app/assets/stylesheets/_tailwind_like.scss
+++ b/app/assets/stylesheets/_tailwind_like.scss
@@ -111,3 +111,18 @@
 .bg-light-gray {
   background-color: #f0f2f5;
 }
+.z-5 {
+  z-index: 5;
+}
+.z-10 {
+  z-index: 10;
+}
+.z-15 {
+  z-index: 15;
+}
+.z-20 {
+  z-index: 20;
+}
+.z-25 {
+  z-index: 25;
+}
