--- a/app/views/saved_pins/edit.html.erb
+++ b/app/views/saved_pins/edit.html.erb
@@ -2,8 +2,8 @@
 
 <%= turbo_frame_tag("edit#{dom_id(@saved_pin)}") do %>
   <% unless @cancel_form %>
-    <div class="modal" data-controller="close-form" data-close-form-target="container" >
-      <div class="modal-content">
+    <div class="modal z-15" data-controller="close-form" data-close-form-target="container" >
+      <div class="modal-content z-20">
         <%= render partial: "saved_pins/edit_saved_pin", locals: {pin: @pin, saved_pin: @saved_pin} %>
       </div>
     </div>
