--- a/app/views/saved_pins/new.html.erb
+++ b/app/views/saved_pins/new.html.erb
@@ -1,8 +1,8 @@
 
 <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") do %>
   <% unless @cancel_form %>
-    <div class="modal" data-controller="close-form" data-close-form-target="container" >
-      <div class="modal-content">
+    <div class="modal z-15" data-controller="close-form" data-close-form-target="container" >
+      <div class="modal-content z-20">
         <%= render partial: "saved_pins/form", locals: {pin: @pin, saved_pin: @saved_pin} %>
       </div>
     </div>
