--- a/app/views/shared/_created_saved_navigation.html.erb
+++ b/app/views/shared/_created_saved_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="middle-nav">
-  <div class="middle-one-line-container">
-    <div class="m1 big border-bottom"><%= link_to "Created", user__created_index_path(user), "data-navigate-target": "navButton"  %></div>
-    <div class="m1 big border-bottom"><%= link_to "Saved", user__saved_index_path(user), "data-navigate-target": "navButton"  %></div>
+  <div class="middle-one-line-container" data-controller="navigate" data-navigate-target="link" data-path=<%= request.fullpath %>>
+    <div class="m1 big border-bottom px-2"><%= link_to "Created", user__created_index_path(user), "data-navigate-target": "navButton"  %></div>
+    <div class="m1 big border-bottom px-2"><%= link_to "Saved", user__saved_index_path(user), "data-navigate-target": "navButton"  %></div>
   </div>
 </div>
