--- a/app/views/shared/_profile.html.erb
+++ b/app/views/shared/_profile.html.erb
@@ -6,6 +6,10 @@
       <% end %>
       <%= render partial: "users/creator_info", locals: {user: user} %>
       <%= render partial: "shared/follow_user", locals: {user: user} %>
+
+      <% if user == current_user %>
+        <%= link_to "Log out ", destroy_user_session_path, data: {turbo_method: :delete}, class: "big button", style: "--i:4" %>
+      <% end %>
     </div>
     
     <%= render partial: "shared/created_saved_navigation", locals: { user: user } %>    
