Add padding to modal

--- a/app/assets/stylesheets/_tailwind_like.scss
+++ b/app/assets/stylesheets/_tailwind_like.scss
@@ -1,5 +1,8 @@
 .p-2 {
-  padding: 0.5rem 0.5rem;
+  padding: 0.5rem;
+}
+.p-4 {
+  padding: 1rem;
 }
 .px-2 {
   padding-left: 0.5rem;
@@ -91,6 +94,9 @@
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+.m-2 {
+  margin: 0.5rem;
 }
 .big {
   font-weight: bold;
