--- a/app/views/saved_pins/new.html.erb
+++ b/app/views/saved_pins/new.html.erb
@@ -2,7 +2,7 @@
 <%= turbo_frame_tag("#{dom_id(@pin)}_new_saved_pin") do %>
   <% unless @cancel_form %>
     <div class="modal z-15" data-controller="close-form" data-close-form-target="container" >
-      <div class="modal-content z-20">
+      <div class="modal-content z-20 p-4">
         <%= render partial: "saved_pins/form", locals: {pin: @pin, saved_pin: @saved_pin} %>
       </div>
     </div>
