--- a/app/views/pins/update.turbo_stream.erb
+++ b/app/views/pins/update.turbo_stream.erb
@@ -11,5 +11,5 @@
 <% end %>
 
 <%= turbo_stream.update "pin_img" do %>
-  <%= render_pin_image(@pin, 508, 760) %>
+  <%= render_full_pin_image(@pin) %>
 <% end %>
