--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -3,11 +3,13 @@
   top: 6.25rem;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 6.25rem);
   background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
 }
 .modal-content {
   position: absolute;
+  max-width: 100%;
+  max-height: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -21,4 +23,19 @@
   z-index: 11;
   background: none;
   color: rgba(0, 0, 0, 0.9);
+}
+@media (max-width: 992px) {
+  .modal-content {
+    max-height: 100%;
+    overflow-y: auto;
+    top: 0;
+    left: 50%;
+    border-radius: 0;
+    transform: translate(-50%,0);
+  }
+  .modal__close {
+    position: fixed;
+    top: 0;
+    right: 0;
+  }
 }
