--- a/app/assets/stylesheets/_tailwind_like.scss
+++ b/app/assets/stylesheets/_tailwind_like.scss
@@ -14,6 +14,16 @@
 .pr-2 {
   padding-right: 0.5rem
 }
+.pr-4 {
+  padding-right: 1rem
+}
+.pl2 {
+  padding-left: 0.5rem
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem
+}
 .max-w-full {
   max-width: 100%;
 }
