--- a/app/assets/stylesheets/_nav.scss
+++ b/app/assets/stylesheets/_nav.scss
@@ -30,7 +30,8 @@ header::after {
   width: 100%;
   height: 100%;
   background: linear-gradient(90deg, transparent, rgba(254, 254, 254, 0.4), transparent);
-  transition: 0.5s
+  z-index: -1;
+  transition: 0.5s;
 }
 header:hover::after {
   left: 100%;
