--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: pin) do |form| %>
+<%= form_with(model: pin, class: "pin_form") do |form| %>
   <%= render partial: "shared/errors_notification", locals: { resource: pin } %>
 
   <div>
