--- a/app/assets/stylesheets/_modal.scss
+++ b/app/assets/stylesheets/_modal.scss
@@ -1,10 +1,14 @@
 .modal {
   position: fixed;
-  top: 6.25rem;
+  top: -1rem;
   left: 0;
   width: 100%;
-  height: calc(100% - 6.25rem);
+  height: 110%;
   background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+.modal.z-5 {
+  top: 6.25rem;
+  height: calc(100% - 6.25rem);
 }
 .modal-content {
   position: absolute;
@@ -25,8 +29,7 @@
   color: rgba(0, 0, 0, 0.9);
 }
 @media (max-width: 992px) {
-  .modal-content {
-    max-height: 100%;
+  .modal-content.z-10 {
     overflow-y: auto;
     top: 0;
     left: 50%;
