Restyle the flash messages

--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,11 +1,11 @@
 <% if flash[:notice].present? %>
-  <div style="color: green">
+  <div class="notice">
     <%= flash[:notice] %>
   </div>
 <% end %>
 
 <% if flash[:error].present? %>
-  <div style="color: red">
+  <div class="error">
     <%= flash[:error] %>
   </div>
 <% end %>
