--- a/app/views/shared/_saved_overlay.html.erb
+++ b/app/views/shared/_saved_overlay.html.erb
@@ -1,5 +1,4 @@
-<% been_saved, saved_to = saved_to_board(pin, current_user) %>
-<%# saved_to_board is a saved_pin helper method %>
+<% saved_pins = pin.saved_pins.select { |save_pin| save_pin.user_id == current_user.id } %>
 
-<%= render partial: "shared/saved_pin_form_layout", locals: {pin: pin} unless been_saved %>
-<%= render partial: "shared/unsave_layout", locals: {pin: pin, board_id: saved_to} if been_saved %>
+<%= render partial: "shared/saved_pin_form_layout", locals: {pin: pin} if saved_pins.size == 0 %>
+<%= render partial: "shared/unsave_layout", locals: {pin: pin, saved_pin: saved_pins.last} if saved_pins.size > 0 %>
