Fix N+1 problem for pins:show and comments:show

--- a/app/views/comments/_no_comment_notice.html.erb
+++ b/app/views/comments/_no_comment_notice.html.erb
@@ -1,4 +1,4 @@
-<% if pin.comments.count.zero? %>
+<% if pin.root_comments.count.zero? %>
   <%= turbo_frame_tag("no_comment_yet") do %>
     <div id="comment-empty">No comments yet! Add one to start the conversation.</div>
   <% end %>
