--- a/app/views/pins/_comments.html.erb
+++ b/app/views/pins/_comments.html.erb
@@ -12,8 +12,10 @@
     <%= turbo_frame_tag("#{dom_id(pin)}_show_all_comments") do %>
       <%= render partial: "comments/no_comment_notice", locals: {pin: pin} %>
 
-      <% pin.comments.is_root.order(id: :desc).each do |comment| %>
-        <%= render partial: "shared/comment_short", locals: {pin: pin, comment: comment} %>
+      <% cache ["pin", pin.id, "comment"] do %>
+        <% pin.root_comments.sort_by{ |comment| comment.id }.reverse_each do |comment| %>
+          <%= render partial: "shared/comment_short", locals: {pin: pin, comment: comment} %>
+        <% end %>
       <% end %>
     <% end %>
   <% end %>
