--- a/app/views/created/index.html.erb
+++ b/app/views/created/index.html.erb
@@ -3,18 +3,16 @@
 <div class="text-center big my-4">All Pins Created</div>
 <%= turbo_frame_tag "content" do %>
   <div class="container">
-    <% cache @pins do %>
+    <% cache [@pins, "created_mode"] do %>
       <% @pins.each do |pin| %>
-        <% cache pin do %>
-          <%= turbo_frame_tag "#{dom_id(pin)}_thumbnail", src: pin_thumbnail_index_path(pin, edit_pin: true), loading: "lazy" do %>
-            <div class="pin_thumbnail--placeholder"></div>
-          <% end %>
+        <% cache [pin, "created_mode"] do %>
+          <%= render partial: "shared/pin", locals: {pin: pin, edit_pin: true} %>
         <% end %>
       <% end %>
     <% end %>
   </div>
 
-  <% if @user == current_user && @user.pins.count == 0 %>
+  <% if @user == current_user && @pins.size == 0 %>
     <div class="text-center my-4">
       <div>You haven't created any pin yet.</div>
       <div><%= link_to "Create One", new_pin_path, data: {turbo_frame: "_top"} %></div>
