--- a/app/views/saved_pins/create.turbo_stream.erb
+++ b/app/views/saved_pins/create.turbo_stream.erb
@@ -7,8 +7,5 @@
 <% end %>
 
 <%= turbo_stream.update "save_unsaved#{dom_id(@pin)}" do %>
-  <% been_saved, saved_to = saved_to_board(@pin, current_user) %>
-  <%# saved_to_board is a helper method %>   
-  <%= render partial: "shared/saved_pin_form_layout", locals: {pin: @pin} unless been_saved %>
-  <%= render partial: "shared/unsave_layout", locals: {pin: @pin, board_id: saved_to} if been_saved %>
+  <%= render partial: "shared/saved_overlay", locals: { pin: @pin } %>
 <% end %>
