--- a/app/views/saved/index.html.erb
+++ b/app/views/saved/index.html.erb
@@ -5,7 +5,7 @@
   <div class="my-4 text-center big">All boards</div>
 
   <div class="my-4 text-center">
-    <%= display_when_user_has_no_boards(@user) %>
+    <%= display_when_user_has_no_boards(@user) if @boards.size == 0 %>
   </div>
 
   <div id="all-boards">
@@ -16,17 +16,12 @@
   <div class="text-center big my-4">Unorganized Ideas</div>
 
   <div class="container">
-    <% cache @unorganized_saved_pins do %>
-      <% @unorganized_saved_pins.each do |saved_pin| %>
-        <% cache saved_pin do %>
-          <%= show_pin_or_saved_pin(saved_pin) %>
-        <% end %>
-      <% end %>
+    <% @unorganized_saved_pins.each do |saved_pin| %>
+      <%= show_pin_or_saved_pin(saved_pin) %>
     <% end %>
   </div>
 
-
-  <% if @user == current_user && @user.saved_pins.count == 0 %>
+  <% if @user == current_user && @unorganized_saved_pins.size == 0 && @boards.size == 0 %>
     <div class="my-4 text-center">
       <div>You haven't saved any pin yet.</div>
       <div><%= link_to "Browse for Ideas", root_path, data: {turbo_frame: "_top"} %></div>
